# app/Models/User.php
@@ -18,9 +18,9 @@ class User extends Authenticatable implements JWTSubject
      * @var array
      */
     protected $fillable = [
-        'name',
         'email',
         'password',
+        'full_name'
     ];
 
     /**
